INCLUDE(../../../cmake/macros.cmake)

SET(TELEMETRY_SOURCES telemetryitf.cpp telemetry.cpp)

ADD_INTERFACE_INCLUDEDIR()
ADD_SDLIB_INCLUDEDIR(tgf portability)

ADD_LIBRARY(telemetry SHARED ${TELEMETRY_SOURCES})

SET_TARGET_PROPERTIES(telemetry PROPERTIES VERSION ${VERSION} SOVERSION 0.0.0)

IF(UNIX)
	SET_TARGET_PROPERTIES(telemetry PROPERTIES PREFIX "")
ENDIF(UNIX)

ADD_SDLIB_LIBRARY(telemetry tgf)

SD_INSTALL_FILES(LIB modules/telemetry TARGETS telemetry)
