INCLUDE(../../../cmake/macros.cmake)

PROJECT(accc)

SET(_TARGET_NAME ${SD_TOOLS_EXECPREFIX}accc)

SET(ACCC_SOURCES ac3dgroup.cpp ac3dload.cpp mainaccc.cpp)

ADD_SDLIB_INCLUDEDIR(portability)

ADD_EXECUTABLE(${_TARGET_NAME} ${ACCC_SOURCES})

IF(UNIX)
    SD_INSTALL_FILES(MAN man6 PREFIX ${SOURCE_DIR}/doc/man FILES ${_TARGET_NAME}.6)
ENDIF(UNIX)

SD_INSTALL_FILES(BIN TARGETS ${_TARGET_NAME})

