INCLUDE(../../../cmake/macros.cmake)
PROJECT(menuview)

SET(MENUVIEW_SOURCES main.cpp previewmenu.cpp)

ADD_INTERFACE_INCLUDEDIR()
ADD_SDLIB_INCLUDEDIR(robottools tgf tgfclient math portability)
ADD_SDL_INCLUDEDIR()

#disable developer warning
if (COMMAND CMAKE_POLICY)
    CMAKE_POLICY(SET CMP0003 NEW)
endif(COMMAND CMAKE_POLICY)

ADD_EXECUTABLE(${SD_TOOLS_EXECPREFIX}menuview ${MENUVIEW_SOURCES})

ADD_SDLIB_LIBRARY(${SD_TOOLS_EXECPREFIX}menuview robottools tgf tgfclient)

IF(OPENGL_FOUND)
    TARGET_LINK_LIBRARIES(${SD_TOOLS_EXECPREFIX}menuview ${OPENGL_LIBRARY})
ENDIF(OPENGL_FOUND)

ADD_PNG_LIBRARY(${SD_TOOLS_EXECPREFIX}menuview)
ADD_SDL_LIBRARY(${SD_TOOLS_EXECPREFIX}menuview)
ADD_PLIB_LIBRARY(${SD_TOOLS_EXECPREFIX}menuview sg ssg ul)
ADD_DL_LIBRARY(${SD_TOOLS_EXECPREFIX}menuview)

SD_INSTALL_FILES(BIN TARGETS ${SD_TOOLS_EXECPREFIX}menuview)

