INCLUDE(../../../cmake/macros.cmake)

PROJECT(nfsperf)

SET(NFSPERF_SOURCES mainnfsperf.cpp)
ADD_SDLIB_INCLUDEDIR(tgf)

IF (COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

ADD_EXECUTABLE(${SD_TOOLS_EXECPREFIX}nfsperf ${NFSPERF_SOURCES})

ADD_SDLIB_LIBRARY(${SD_TOOLS_EXECPREFIX}nfsperf tgf txml)

IF(UNIX)
  TARGET_LINK_LIBRARIES(${SD_TOOLS_EXECPREFIX}nfsperf dl)
ENDIF(UNIX)

SD_INSTALL_FILES(BIN TARGETS ${SD_TOOLS_EXECPREFIX}nfsperf)
