INCLUDE(../../../cmake/macros.cmake)

PROJECT(texmapper)

SET(TEXMAPPER_SOURCES maintexmapper.cpp ssgSaveAC.cpp)

ADD_INTERFACE_INCLUDEDIR()
ADD_SDLIB_INCLUDEDIR(tgf tgfclient)
ADD_PLIB_INCLUDEDIR()

#disable developer warning
IF (COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

ADD_EXECUTABLE(${SD_TOOLS_EXECPREFIX}texmapper ${TEXMAPPER_SOURCES})

ADD_PLIB_LIBRARY(${SD_TOOLS_EXECPREFIX}texmapper sg ssg ul)

ADD_SDLIB_LIBRARY(${SD_TOOLS_EXECPREFIX}texmapper tgf tgfclient)

ADD_PNG_LIBRARY(${SD_TOOLS_EXECPREFIX}texmapper)

IF(UNIX)
	ADD_X11_LIBRARY(${SD_TOOLS_EXECPREFIX}texmapper)
	ADD_XRANDR_LIBRARY(${SD_TOOLS_EXECPREFIX}texmapper)
ENDIF(UNIX)

SD_INSTALL_FILES(BIN TARGETS ${SD_TOOLS_EXECPREFIX}texmapper)

