INCLUDE(../../../cmake/macros.cmake)

PROJECT(texmapper)

SET(_TARGET_NAME ${SD_TOOLS_EXECPREFIX}texmapper)

SET(_SOURCES main.cpp ssgSaveAC.cpp)

ADD_INTERFACE_INCLUDEDIR()
ADD_SDLIB_INCLUDEDIR(tgf tgfclient)
ADD_PLIB_INCLUDEDIR()

#disable developer warning
IF (COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

ADD_EXECUTABLE(${_TARGET_NAME} ${_SOURCES})

ADD_PLIB_LIBRARY(${_TARGET_NAME} sg ssg ul)

ADD_SDLIB_LIBRARY(${_TARGET_NAME} tgf tgfclient)

ADD_PNG_LIBRARY(${_TARGET_NAME})

IF(UNIX)
	ADD_X11_LIBRARY(${_TARGET_NAME})
	ADD_XRANDR_LIBRARY(${_TARGET_NAME})
ENDIF(UNIX)

SD_INSTALL_FILES(BIN TARGETS ${_TARGET_NAME})

